[gd_scene load_steps=53 format=3 uid="uid://b3g5n4xe4yt4p"]

[ext_resource type="Script" path="res://game/scripts/settings_screen.gd" id="1_1v03o"]
[ext_resource type="Texture2D" uid="uid://dy5a1r1rdb8jk" path="res://assets/sprites/misc/background spritesheet.png" id="2_hwb55"]
[ext_resource type="PackedScene" uid="uid://d3qdof7p28fgh" path="res://game/asset scenes/full_screen_setting.tscn" id="2_yuhm7"]
[ext_resource type="FontFile" uid="uid://dt3erijhpe63p" path="res://assets/fonts/AntonSC-Regular.ttf" id="3_nie21"]
[ext_resource type="PackedScene" uid="uid://dsy2woc2e8lax" path="res://game/asset scenes/settings_button.tscn" id="5_2c1iq"]
[ext_resource type="Texture2D" uid="uid://b4vyqaju8nqnm" path="res://assets/sprites/misc/checkbox true.png" id="5_hya6d"]
[ext_resource type="Texture2D" uid="uid://8h76odpign5r" path="res://assets/sprites/misc/checkbox false.png" id="6_fpc5k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w4ygb"]
atlas = ExtResource("2_hwb55")
region = Rect2(0, 0, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_utro1"]
atlas = ExtResource("2_hwb55")
region = Rect2(937, 0, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4svg"]
atlas = ExtResource("2_hwb55")
region = Rect2(1874, 0, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdw2b"]
atlas = ExtResource("2_hwb55")
region = Rect2(2811, 0, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7k0v"]
atlas = ExtResource("2_hwb55")
region = Rect2(3748, 0, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_oe00l"]
atlas = ExtResource("2_hwb55")
region = Rect2(0, 835, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx64c"]
atlas = ExtResource("2_hwb55")
region = Rect2(937, 835, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_43l8c"]
atlas = ExtResource("2_hwb55")
region = Rect2(1874, 835, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts3j1"]
atlas = ExtResource("2_hwb55")
region = Rect2(2811, 835, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pied"]
atlas = ExtResource("2_hwb55")
region = Rect2(3748, 835, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ck2q"]
atlas = ExtResource("2_hwb55")
region = Rect2(0, 1670, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqwfw"]
atlas = ExtResource("2_hwb55")
region = Rect2(937, 1670, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw56l"]
atlas = ExtResource("2_hwb55")
region = Rect2(1874, 1670, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mqaq"]
atlas = ExtResource("2_hwb55")
region = Rect2(2811, 1670, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_djtnr"]
atlas = ExtResource("2_hwb55")
region = Rect2(3748, 1670, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_0750g"]
atlas = ExtResource("2_hwb55")
region = Rect2(0, 2505, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl2ei"]
atlas = ExtResource("2_hwb55")
region = Rect2(937, 2505, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_l24cs"]
atlas = ExtResource("2_hwb55")
region = Rect2(1874, 2505, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_roykj"]
atlas = ExtResource("2_hwb55")
region = Rect2(2811, 2505, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_buui3"]
atlas = ExtResource("2_hwb55")
region = Rect2(3748, 2505, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahgw"]
atlas = ExtResource("2_hwb55")
region = Rect2(0, 3340, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv402"]
atlas = ExtResource("2_hwb55")
region = Rect2(937, 3340, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdg1a"]
atlas = ExtResource("2_hwb55")
region = Rect2(1874, 3340, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_25e02"]
atlas = ExtResource("2_hwb55")
region = Rect2(2811, 3340, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjw7i"]
atlas = ExtResource("2_hwb55")
region = Rect2(3748, 3340, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f1tc"]
atlas = ExtResource("2_hwb55")
region = Rect2(0, 4175, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2hd3"]
atlas = ExtResource("2_hwb55")
region = Rect2(937, 4175, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ls6v"]
atlas = ExtResource("2_hwb55")
region = Rect2(1874, 4175, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygqta"]
atlas = ExtResource("2_hwb55")
region = Rect2(2811, 4175, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7f7f"]
atlas = ExtResource("2_hwb55")
region = Rect2(3748, 4175, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf5ir"]
atlas = ExtResource("2_hwb55")
region = Rect2(0, 5010, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4lnj"]
atlas = ExtResource("2_hwb55")
region = Rect2(937, 5010, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_i20p3"]
atlas = ExtResource("2_hwb55")
region = Rect2(1874, 5010, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0lvk"]
atlas = ExtResource("2_hwb55")
region = Rect2(2811, 5010, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_6101g"]
atlas = ExtResource("2_hwb55")
region = Rect2(3748, 5010, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5ewg"]
atlas = ExtResource("2_hwb55")
region = Rect2(0, 5845, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0n18"]
atlas = ExtResource("2_hwb55")
region = Rect2(937, 5845, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_holmu"]
atlas = ExtResource("2_hwb55")
region = Rect2(1874, 5845, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa1gh"]
atlas = ExtResource("2_hwb55")
region = Rect2(2811, 5845, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeuxy"]
atlas = ExtResource("2_hwb55")
region = Rect2(3748, 5845, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwqge"]
atlas = ExtResource("2_hwb55")
region = Rect2(0, 6680, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4cfh"]
atlas = ExtResource("2_hwb55")
region = Rect2(937, 6680, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjwrj"]
atlas = ExtResource("2_hwb55")
region = Rect2(1874, 6680, 937, 835)

[sub_resource type="AtlasTexture" id="AtlasTexture_jingm"]
atlas = ExtResource("2_hwb55")
region = Rect2(2811, 6680, 937, 835)

[sub_resource type="SpriteFrames" id="SpriteFrames_noq2a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4ygb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utro1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4svg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdw2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7k0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oe00l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx64c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43l8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts3j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pied")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ck2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqwfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw56l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mqaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djtnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0750g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl2ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l24cs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roykj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buui3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv402")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdg1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25e02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjw7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f1tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2hd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ls6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygqta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7f7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf5ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4lnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i20p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0lvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6101g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5ewg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0n18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa1gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeuxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwqge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4cfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjwrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jingm")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1v03o")

[node name="Background" type="AnimatedSprite2D" parent="."]
position = Vector2(577, 249)
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_noq2a")
autoplay = "default"

[node name="FullScreenSetting" parent="." instance=ExtResource("2_yuhm7")]
layout_mode = 0
offset_left = 83.0
offset_top = 94.0
offset_right = 320.0
offset_bottom = 170.0
theme_override_fonts/font = ExtResource("3_nie21")
theme_override_icons/checked = ExtResource("5_hya6d")
theme_override_icons/unchecked = ExtResource("6_fpc5k")

[node name="BackButton" parent="." instance=ExtResource("5_2c1iq")]
layout_mode = 0
offset_left = 394.0
offset_top = 562.0
offset_right = 762.0
offset_bottom = 624.0
theme_override_fonts/font = ExtResource("3_nie21")
text = "Back"

[node name="ControlsButton" parent="." instance=ExtResource("5_2c1iq")]
layout_mode = 0
offset_left = 394.0
offset_top = 461.0
offset_right = 762.0
offset_bottom = 523.0
theme_override_fonts/font = ExtResource("3_nie21")
text = "Controls"

[connection signal="pressed" from="FullScreenSetting" to="." method="_on_full_screen_setting_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_controls_button_pressed"]
